--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+lib/
 
 # Dependency directories
 node_modules/
@@ -78,6 +79,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.production
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
