--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "mongoose": "^7.5.0",
-      "morgan": "^1.10.0"
+      "morgan": "^1.10.0",
+      "multer": "^1.4.5-lts.1"
    },
    "devDependencies": {
       "@babel/cli": "^7.22.10",
