--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
    },
    "homepage": "https://github.com/kumarsomeshunos/portfolio-website-backend#readme",
    "dependencies": {
+      "bcrypt": "^5.1.1",
+      "cookie-parser": "^1.4.6",
+      "core-js": "^3.32.2",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.2",
       "mongoose": "^7.5.0",
       "morgan": "^1.10.0",
       "multer": "^1.4.5-lts.1"
