--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "jsonwebtoken": "^9.0.2",
+      "markdown-it": "^14.1.0",
+      "markdown-it-anchor": "^9.0.1",
+      "markdown-it-attrs": "^4.1.6",
       "mongoose": "^7.5.0",
       "morgan": "^1.10.0",
       "multer": "^1.4.5-lts.1",
